--- a/style.css
+++ b/style.css
@@ -895,13 +895,30 @@ object {
 }
 /*----------------------------Custom Css------------------------------*/
 .main-header{
+
+    margin-top: 20px;
     display: flex;
     justify-content:space-between;
-    margin-top: 20px;
+
 }
 .wrapper{
     width: 100%;
     padding: 0 100px;
+}
+.nav-wrapper{
+    background: #e6c36e;
+}
+.nav-wrapper .main-nav{
+    background: #e6c36e;
+    border:0;
+    font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+    font-size: 11px;
+    font-weight: bold;
+}
+.navbar-default .navbar-collapse, .navbar-default .navbar-form{
+    padding: 0;
+}
+.header-wrapper{
     background: #eeeaeb;
 }
 .secondry-menu .list-inline li a{
@@ -914,15 +931,56 @@ object {
 .secondry-menu .list-inline li:first-child{
     border-right:2px solid #333132;
 }
+
+input[type=search]{
+    border:1px solid #7f9ebb;
+}
 .header-search-form{
     display: flex;
     justify-content:flex-end;
 }
-input[type=search]{
-    border:1px solid #7f9ebb;
+.navbar-default .navbar-nav>li>a{
+    color: #333333;
+    margin-right:15px;
 }
-.logo{
-
-    display: inline-block;
+.navbar-default .navbar-nav>li>a:hover ,.sub-menu li a:hover{
+    color:#fefefe;
+    background: #c8a551;
+    text-decoration: none;
+}
+.sub-menu {
+    display: none;
+    position:absolute;
+    background: #e6c36e;
+    margin: 0;
+    padding: 0;
+    width: 180px;
+    left: 0;
+}
+.sub-menu .sub-menu {
+    left: 100%;
+    top: 0;
+}
+.sub-menu li{
+    list-style: none;
+    padding: 5px 15px;
+    position: relative;
+}
+.sub-menu li a{
+    color: #333333;
+}
+.navbar-nav li:hover >.sub-menu{
+    display: block;
+}
+.navbar-nav{
+    position: relative;
+}
+.sub-menu:hover{
+    color:#fefefe;
+    background: #c8a551;
+}
+.author-page img{
+    float: left;
+    border: 6px solid #d5d5d5;
 }
 /*----------------------------main header------------------------------*/
